force-app/main/default/objects/EmailRelayAuthUser__mdt/EmailRelayAuthUser__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata is used for storing Authenticating User Configuration.</description>
    <label>EmailRelayAuthUser</label>
    <pluralLabel>EmailRelayAuthUsers</pluralLabel>
</CustomObject>