force-app/main/default/objects/EmailRelayAuthUser__mdt/fields/Auth_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Auth_User_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This is used to store the Email Relay Authentication UserName.</description>
    <label>Auth User Name</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>