force-app/main/default/objects/EmailRelayAuthUser__mdt/fields/Auth_User_Password__c.field-meta.xml
<CustomField>
    <fullName>Auth_User_Password__c</fullName>
    <description>This field is used to store the Email Relay Authentication Password.</description>
    <label>Auth User Password</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>