force-app/main/default/objects/EmailRelayAuthUser__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>This is used to perform the load balancing in round robin fashion.</description>
    <label>Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>